--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "nodejs5",
+  "name": "react-node-app",
   "version": "1.0.0",
-  "description": "lesson",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "roy",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "mongodb": "^3.1.0-beta4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-env": "^1.2.2"
   }
 }
